2003-09-16  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.8alpha1.

	* .: Releasing Twisted 1.0.8alpha2 (Fixed Debian packages).

2003-09-13  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7 (no code changes since 1.0.7rc1).

	* twisted/web/vhost.py: Un-gobble the path segment that a vhost eats
	when the resource we're wrapping isLeaf. Potentially closes issue125.

2003-09-12  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/microdom.py: lenient mode correctly handles <script>
	tags with CDATA or comments protecting the code (closes issue #231).

2003-09-10  Tommi Virtanen  <tv@twistedmatrix.com>

	* HTTPS support for XML-RPC and web clients (closes issue #236).

2003-08-29  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7rc1.

2003-09-12  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/spread/pb.py: new cred support for Perspective Broker.
	
2003-08-26  Dave Peticolas  <dave@krondo.com>

	* doc/howto/xmlrpc.html: document sub-handler and introspection

	* twisted/test/test_xmlrpc.py: test introspection support

	* twisted/web/xmlrpc.py: implement sub-handlers and introspection
	support

2003-08-23  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py: force timeout values to be
	integers, because recent pygtk's complain when they get floats

2003-08-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha5.

2003-08-18  Jp Calderone <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: Remove support code for old versions
	of IMailbox.fetch(); also change the interface once again (no
	backwards compat this time) to require sequence numbers to be
	returned, not just whatever the MessageSet spit out.

2003-08-16  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_import.py: update for enterprise

	* twisted/enterprise/sqlreflector.py: use dbpool directly
